# dune-hdd

dune/hdd/hyperbolic/problems/: 2dboltzmann.hh  2dboltzmanncheckerboard.hh  burgers.hh  default.hh  interfaces.hh  onebeam.hh  rectangularic.hh  shallowwater.hh  sourcebeam.hh  transport.hh  twobeams.hh  twopulses.hh
dune/hdd/linearelliptic/: discreteproblem.hh
dune/hdd/linearelliptic/discretizations/: swipdg.hh
dune/hdd/linearelliptic/problems/: thermalblock.hh
examples/: CMakeLists.txt
examples/hyperbolic/: CMakeLists.txt  burgers.cc  twobeams.cc  twobeams_reference.cc
